--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4  f01220c46fc92c6e6b161b1849de11faacd7ccb2  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4      Analyze NY Restaurant data using Spark in DSX       Live           4  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 164,
    "metadata": {
     "scrolled": false
    },
@@ -266,7 +266,7 @@
        "0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "max    937.000000"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "45976"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "max     364.000000"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 170,
    "metadata": {
     "scrolled": true
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
        "[1056 rows x 5 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "[1051 rows x 5 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,117 +995,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>email</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>article_id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1429.0</th>\n",
-       "      <td>937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1330.0</th>\n",
-       "      <td>927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1431.0</th>\n",
-       "      <td>671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1427.0</th>\n",
-       "      <td>643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1364.0</th>\n",
-       "      <td>627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1113.0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1119.0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>984.0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1127.0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1266.0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>714 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            email\n",
-       "article_id       \n",
-       "1429.0        937\n",
-       "1330.0        927\n",
-       "1431.0        671\n",
-       "1427.0        643\n",
-       "1364.0        627\n",
-       "...           ...\n",
-       "1113.0          1\n",
-       "1119.0          1\n",
-       "984.0           1\n",
-       "1127.0          1\n",
-       "1266.0          1\n",
-       "\n",
-       "[714 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "description = df[['email','article_id']].groupby(['article_id']).count().sort_values(by='email', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1014,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1108,7 @@
        "4      1276.0          deploy your python model as a restful api        5"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1284,10 +1183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 277,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_top_articles(n, df=df):\n",
@@ -1301,7 +1198,13 @@
     "    \n",
     "    '''\n",
     "    # Your code here\n",
-    "    \n",
+    "    list_of_articles = df.groupby(['article_id']).count().sort_values(by='user_id', ascending=False)\n",
+    "    values = list_of_articles.iloc[0:n].index.get_level_values(0)\n",
+    "    top_articles = []\n",
+    "    for i in range(n):\n",
+    "        title_value = df[df['article_id'] == values[i]]['title']\n",
+    "        top_articles.append(title_value.values[0])\n",
+    "        \n",
     "    return top_articles # Return the top article titles from df (not df_content)\n",
     "\n",
     "def get_top_article_ids(n, df=df):\n",
@@ -1314,18 +1217,28 @@
     "    top_articles - (list) A list of the top 'n' article titles \n",
     "    \n",
     "    '''\n",
-    "    # Your code here\n",
+    "    list_of_articles = df.groupby(['article_id']).count().sort_values(by='user_id', ascending=False)\n",
+    "    values = list_of_articles.iloc[0:n].index.get_level_values(0)\n",
+    "    top_article_ids = []\n",
+    "    top_article_ids.append(values.values.tolist())\n",
     " \n",
-    "    return top_articles # Return the top article ids"
+    "    return top_article_ids # Return the top article ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['use deep learning for image classification', 'insights from new york car accident reports', 'visualize car data with brunel', 'use xgboost, scikit-learn & ibm watson machine learning apis', 'predicting churn with the spss random tree algorithm', 'healthcare python streaming application demo', 'finding optimal locations of new store using decision optimization', 'apache spark lab, part 1: basic concepts', 'analyze energy consumption in buildings', 'gosales transactions for logistic regression model']\n",
+      "[[1429.0, 1330.0, 1431.0, 1427.0, 1364.0, 1314.0, 1293.0, 1170.0, 1162.0, 1304.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_top_articles(10))\n",
     "print(get_top_article_ids(10))"
@@ -1333,11 +1246,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your top_5 looks like the solution list! Nice job.\n",
+      "Your top_10 looks like the solution list! Nice job.\n",
+      "Your top_20 looks like the solution list! Nice job.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function by returning the top 5, 10, and 20 articles\n",
     "top_5 = get_top_articles(5)\n",
