--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1420,10 +1420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 187,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_article_names(article_ids, df=df):\n",
@@ -1436,8 +1434,9 @@
     "    article_names - (list) a list of article names associated with the list of article ids \n",
     "                    (this is identified by the title column)\n",
     "    '''\n",
-    "    # Your code here\n",
-    "    \n",
+    "\n",
+    "    article_names = df[df['article_id'].isin(article_ids)]['title'].drop_duplicates().values.tolist()\n",
+    "\n",
     "    return article_names # Return the article names associated with list of article ids\n",
     "\n",
     "\n",
@@ -1456,7 +1455,11 @@
     "    Description:\n",
     "    Provides a list of the article_ids and article titles that have been seen by a user\n",
     "    '''\n",
-    "    # Your code here\n",
+    "    \n",
+    "    article_ids =  user_item.loc[user_id][user_item.loc[user_id] > 0].index.tolist()\n",
+    "    article_ids = [str(i) for i in article_ids]\n",
+    "    \n",
+    "    article_names = get_article_names(article_ids)\n",
     "    \n",
     "    return article_ids, article_names # return the ids and names\n",
     "\n",
@@ -1482,18 +1485,58 @@
     "    and ends exceeding m, the last items are chosen arbitrarily\n",
     "    \n",
     "    '''\n",
-    "    # Your code here\n",
+    "\n",
+    "    # Find similar users\n",
+    "    similar_users = find_similar_users(user_id, user_item=user_item)\n",
     "    \n",
-    "    return recs # return your recommendations for this user_id    "
+    "    # Find articles for the user \n",
+    "    article_user_id, article_names = get_user_articles(user_id, user_item=user_item)\n",
+    "    \n",
+    "    # Keep the recommended movies here\n",
+    "    recs = np.array([])\n",
+    "    \n",
+    "    # Go through the similar users and identify articles the user hasn't seen\n",
+    "    for user in similar_users:\n",
+    "        \n",
+    "        articles_users_ids, articles_names = get_user_articles(user, user_item=user_item)\n",
+    "        \n",
+    "        new_recs = np.setdiff1d(articles_users_ids, article_user_id, assume_unique=True)\n",
+    "        \n",
+    "        #recs = np.unique(np.concatenate([new_recs, recs],axis=0))\n",
+    "        recs = list(set().union(recs, article_ids)) \n",
+    "        \n",
+    "        if len(recs) > m-1:\n",
+    "            break  \n",
+    "    \n",
+    "    return recs[:m] # return your recommendations for this user_id    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['43.0', '109.0', '151.0', '268.0', '310.0', '329.0', '346.0', '390.0', '494.0', '525.0', '585.0', '626.0', '668.0', '732.0', '768.0', '910.0', '968.0', '981.0', '1052.0', '1170.0', '1183.0', '1185.0', '1232.0', '1293.0', '1305.0', '1363.0', '1368.0', '1391.0', '1400.0', '1406.0', '1427.0', '1429.0', '1430.0', '1431.0', '1436.0', '1439.0']\n",
+      "['43.0', '109.0', '268.0', '310.0', '329.0', '346.0', '390.0', '494.0', '525.0', '585.0', '626.0', '668.0', '732.0', '768.0', '910.0', '968.0', '981.0', '1052.0', '1170.0', '1183.0', '1185.0', '1232.0', '1293.0', '1305.0', '1363.0', '1368.0', '1391.0', '1400.0', '1406.0', '1427.0', '1429.0', '1430.0', '1431.0', '1436.0', '1439.0']\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'article_ids' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-193-dd9121a6ef8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Check Results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mget_article_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_user_recs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Return 10 recommendations for user 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-187-f1a558b5b1f4>\u001b[0m in \u001b[0;36muser_user_recs\u001b[0;34m(user_id, m)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;31m#recs = np.unique(np.concatenate([new_recs, recs],axis=0))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0mrecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marticle_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'article_ids' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Check Results\n",
     "get_article_names(user_user_recs(1, 10)) # Return 10 recommendations for user 1"
@@ -1501,11 +1544,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['232.0', '844.0', '1320.0']\n",
+      "['232.0', '844.0', '1320.0']\n",
+      "['1024.0', '1176.0', '1305.0', '1314.0', '1422.0', '1427.0']\n",
+      "['1024.0', '1176.0', '1305.0', '1314.0', '1422.0', '1427.0']\n",
+      "If this is all you see, you passed all of our tests!  Nice job!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your functions here - No need to change this code - just run this cell\n",
     "assert set(get_article_names(['1024.0', '1176.0', '1305.0', '1314.0', '1422.0', '1427.0'])) == set(['using deep learning to reconstruct high-resolution audio', 'build a python app on the streaming analytics service', 'gosales transactions for naive bayes model', 'healthcare python streaming application demo', 'use r dataframes & ibm watson natural language understanding', 'use xgboost, scikit-learn & ibm watson machine learning apis']), \"Oops! Your the get_article_names function doesn't work quite how we expect.\"\n",
