feat: comment od the results
finish last task

--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -3634,12 +3634,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Blue graph represents train set,"
+    "Blue graph represents train set, whereas yellow one shows test set."
    ]
   },
   {
@@ -3655,7 +3653,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your response here.**"
+    "**Comment on the results**\n",
+    "Based on the graph above, looking at training dataset, accuracy is getting higher, as the number of latent features increases. This is not seen on the test dataset, where accuracy dicreases, as the number of latent features increases. This is common over-fitting problem which emphesises cold start issue and shows that current model is not good. We are able only to make prediction for 20 users in the data set.\n",
+    "One idea to make the recommendation system work better, is to introduce rank based recommendation or/and content based recommendation."
    ]
   },
   {
@@ -3664,13 +3664,9 @@
     "collapsed": true
    },
    "source": [
-    "## Directions to Submit\n",
+    "### Directions to Submit\n",
     "\n",
-    "> Before you submit your project, you need to create a .html or .pdf version of this notebook in the workspace here. To do that, run the code cell below. If it worked correctly, you should get a return code of 0, and you should see the generated .html file in the workspace directory (click on the orange Jupyter icon in the upper left).\n",
-    "\n",
-    "> Alternatively, you can download this report as .html via the **File** > **Download as** submenu, and then manually upload it into the workspace directory by clicking on the orange Jupyter icon in the upper left, then using the Upload button.\n",
-    "\n",
-    "> Once you've done this, you can submit your project by clicking on the \"Submit Project\" button in the lower right here. This will create and submit a zip file with this .ipynb doc and the .html or .pdf version you created. Congratulations! "
+    "Create a .html or .pdf version of this notebook in the workspace here. To do that, run the code cell below. If it worked correctly, you should get a return code of 0, and you should see the generated .html file in the workspace directory."
    ]
   },
   {
